--- a/css/bootstrap/bootstrap-grid.css
+++ b/css/bootstrap/bootstrap-grid.css
@@ -5,7 +5,8 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
  */
 @-ms-viewport {
-  width: device-width; }
+  width: device-width; 
+}
 
 html {
   -webkit-box-sizing: border-box;
@@ -16,7 +17,8 @@ html {
 *::before,
 *::after {
   -webkit-box-sizing: inherit;
-  box-sizing: inherit; }
+  box-sizing: inherit; 
+}
 
 .container {
   width: 100%;
